# networking-help

./: Makefile  README.md  flash_code.jlink
application/: CMakeLists.txt  Kconfig  app.overlay  erase_all.jlink  prj.conf
application/src/: main.c
application/src/network/: dhcp.c  lte.c  lte.h  network.c  network.h
application/src/usb/: usb.c  usb.h
sdk_mods/: modem_cellular.c
